[package]
name = "tch-tensor-like-derive"
version = "0.2.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"
description = "Derive macro implemenations used by tch-tensor-like crate"
# categories = []
documentation = "https://docs.rs/tch-tensor-like-derive/"
repository = "https://github.com/jerry73204/tch-tensor-like.git"
homepage = "https://github.com/jerry73204/tch-tensor-like"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
syn = "1.0.90"
quote = "1.0.17"
