[package]
name = "tch-tensor-like"
version = "0.2.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"
# categories = []
documentation = "https://docs.rs/tch-tensor-like/"
repository = "https://github.com/jerry73204/tch-tensor-like.git"
homepage = "https://github.com/jerry73204/tch-tensor-like"
README = "../README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.3"
tch-tensor-like-derive = { path = "../derive", version = "0.1", optional = true }

[dev-dependencies]
approx = "0.3"

[features]
derive = ["tch-tensor-like-derive"]
