[package]
name = "tch-tensor-like"
version = "0.6.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"
description = "Derive convenient methods for struct or enum of tch tensors"
# categories = []
documentation = "https://docs.rs/tch-tensor-like/"
repository = "https://github.com/jerry73204/tch-tensor-like.git"
homepage = "https://github.com/jerry73204/tch-tensor-like"
readme = "../README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.7.0"
tch-tensor-like-derive = { path = "../derive", version = "0.2", optional = true }

[dev-dependencies]
approx = "0.5.1"

[features]
derive = ["tch-tensor-like-derive"]
doc-only = ["tch/doc-only"]

[package.metadata.docs.rs]
features = ["doc-only"]
no-default-features = true
